[gd_scene load_steps=3 format=3 uid="uid://dl57yv004ohwb"]

[ext_resource type="Script" path="res://UI/Pause.gd" id="1_k07st"]
[ext_resource type="Theme" uid="uid://d0n3nqyxcgwle" path="res://Assets/Themes/Label.tres" id="2_6s7ek"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k07st")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.686275)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6s7ek")
theme_override_font_sizes/font_size = 80
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -221.0
offset_top = -209.0
offset_right = -63.0
offset_bottom = -54.0
grow_horizontal = 0
grow_vertical = 0

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6s7ek")
theme_override_font_sizes/font_size = 40
text = "CONTINUAR"
flat = true

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6s7ek")
theme_override_font_sizes/font_size = 40
text = "MENU PRINCIPAL"
flat = true

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
